--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuts",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "This project is to nuts gulp work.",
   "main": "index.js",
   "scripts": {
@@ -21,19 +21,22 @@
   },
   "homepage": "https://github.com/F-happy/nuts#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "del": "^2.1.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "commander": "^2.9.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
     "gulp-compass": "^2.1.0",
-    "gulp-connect": "^2.3.1",
-    "gulp-htmlmin": "^1.2.0",
-    "gulp-plumber": "^1.0.1",
+    "gulp-connect": "^4.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
-    "gulp-uglify": "^1.5.1",
+    "gulp-uglify": "^1.5.3",
+    "gulp-webpack": "^1.5.0",
     "minimist": "^1.2.0",
-    "node-dir": "^0.1.11",
-    "through2": "^2.0.0"
+    "node-dir": "^0.1.12",
+    "nuts-util": "^1.0.1",
+    "through2": "^2.0.1"
   }
 }
