--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-  "name": "wishbao",
-  "version": "0.1.0",
-  "description": "This project is to wishbao gulp work.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/F-happy/nuts.git"
-  },
-  "keywords": [
-    "work",
-    "gulp"
-  ],
-  "author": "jonnyf",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/F-happy/nuts/issues"
-  },
-  "homepage": "https://github.com/F-happy/nuts#readme",
-  "devDependencies": {
-    "babel-core": "^6.9.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "commander": "^2.9.0",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-compass": "^2.1.0",
-    "gulp-connect": "^4.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-uglify": "^1.5.3",
-    "gulp-webpack": "^1.5.0",
-    "minimist": "^1.2.0",
-    "node-dir": "^0.1.12",
-    "nuts-util": "^1.0.1",
-    "through2": "^2.0.1"
-  }
+    "name": "wishbao",
+    "version": "0.1.1",
+    "description": "This project is to wishbao gulp work.",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/F-happy/nuts.git"
+    },
+    "keywords": [
+        "work",
+        "gulp"
+    ],
+    "author": "jonnyf",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/F-happy/nuts/issues"
+    },
+    "bin": {
+        "nuts": "./index"
+    },
+    "homepage": "https://github.com/F-happy/nuts#readme",
+    "dependencies": {
+        "babel-core": "^6.9.0",
+        "babel-loader": "^6.2.4",
+        "babel-preset-es2015": "^6.9.0",
+        "commander": "^2.9.0",
+        "del": "^2.2.0",
+        "gulp": "^3.9.1",
+        "gulp-compass": "^2.1.0",
+        "gulp-connect": "^4.0.0",
+        "gulp-plumber": "^1.1.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-replace": "^0.5.4",
+        "gulp-uglify": "^1.5.3",
+        "gulp-webpack": "^1.5.0",
+        "minimist": "^1.2.0",
+        "node-dir": "^0.1.12",
+        "nuts-util": "^1.0.1",
+        "through2": "^2.0.1"
+    }
 }
