--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wishbao",
-    "version": "0.1.1",
+    "version": "0.1.3",
     "description": "This project is to wishbao gulp work.",
     "main": "index.js",
     "scripts": {
@@ -20,7 +20,7 @@
         "url": "https://github.com/F-happy/nuts/issues"
     },
     "bin": {
-        "nuts": "./index"
+        "nuts": "./index.js"
     },
     "homepage": "https://github.com/F-happy/nuts#readme",
     "dependencies": {
@@ -39,7 +39,7 @@
         "gulp-webpack": "^1.5.0",
         "minimist": "^1.2.0",
         "node-dir": "^0.1.12",
-        "nuts-util": "^1.0.1",
         "through2": "^2.0.1"
-    }
+    },
+    "devDependencies": {}
 }
