--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "wishbao",
-    "version": "0.1.7",
+    "version": "0.1.8",
     "description": "This project is to wishbao gulp work.",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "node index --build",
+        "release": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
         "type": "git",
